2013-02-27  Alexander V. Lukyanov <lav@yars.free.net>

	* lftp_ssl.cc, resource.cc: add SNI support.

2013-02-26  Alexander V. Lukyanov <lav@yars.free.net>

	* Torrent.cc, Torrent.h: add numeric key for udp tracker.
	* buffer.cc, buffer.h: (Append(xstring)) new method.
	* TorrentTracker.cc, TorrentTracker.h: add udp tracker support.

2013-02-25  Alexander V. Lukyanov <lav@yars.free.net>

	* Torrent.cc, Torrent.h, TorrentTracker.cc, TorrentTracker.h:
	  split off TorrentTracker; add TrackerBackend class; prepare
	  for udp tracker implementation.
	* ResMgr.cc: include stdlib.h for strtoll.
	* DHT.cc, DHT.h: add requests_in_flight node counter; clean up
	  nodes more aggresively; make just loaded nodes non-good.

2013-02-20  Alexander V. Lukyanov <lav@yars.free.net>

	* commands.cc: add "jobs" command arguments description.

2013-02-15  Alexander V. Lukyanov <lav@yars.free.net>

	* CmdExec.cc, CmdExec.h: (cmd:show-status) new setting.

2013-02-07  Alexander V. Lukyanov <lav@yars.free.net>

	* FileCopy.cc, FileSetOutput.cc, Fish.cc, FtpDirList.cc, Http.cc, HttpDir.cc,
	  OutputJob.cc, SFtp.cc, SMTask.cc, SMTask.h, buffer.cc, ftpclass.cc:
	  add ready task list to optimize Schedule when there are too many suspended
	  tasks.

2013-01-31  Alexander V. Lukyanov <lav@yars.free.net>

	* xstring.cc, xstring.h: add flags in url_decode.
	* Torrent.cc: pass URL_DECODE_PLUS flag to decode '+' into space.
	* Makefile.am: add uninstall-hook to remove modules and some empty directories.

2013-01-29  Alexander V. Lukyanov <lav@yars.free.net>

	* xstring.cc: (_url_decode) fixed decoding plus sign.
	* Timer.cc, Timer.h: (StopDelayed) new method.
	* Torrent.cc: don't call AnnounceDHT in StartTrackers, do it
	  only by timer; stop dht_announce_timer at the start; use Roll
	  method to set log context; decode magnet URL values properly.
	* DHT.cc: refresh routes after loading the node cache; load the
	  cache quickly using Roll; add some debug log messages.
